SubBox/wwwroot/css/index.css
.dark-mode {
    background-color: #131313;
    --bg: #191919;
    --bg_t: #19191977;
    --nav_bg: #0f0f0f;
    --nav_bg_t: #0f0f0f77;
    --font_title: #fafafa;
    --font_text: #b8b8b8;
    --highlight: #2e2e2e;
    --highlight_t: #2e2e2edd;
    --video_bd_bot: #666666;
}

.light-mode {
    background-color: #fafafa;
    --bg: #fafafa;
    --bg_t: #fafafa77;
    --nav_bg: #ffffff;
    --nav_bg_t: #ffffff77;
    --font_title: #131313;
    --font_text: #969696;
    --highlight: #f4f4f4;
    --highlight_t: #f4f4f4dd;
    --video_bd_bot: #c6c6c6;
}

:root {
    --mainColor: #db4437;
    --secColor: white;
}

#app {
    min-height: 100%;
    height: auto;
}

#confirmationMenu {
    top: 0;
    display: none;
    position: fixed;
    width: 100%;
    height: 100%;
    background: #00000033;
    backdrop-filter: blur(10px);
    z-index: 2000;
    justify-content: center;
    align-items: center;
}

    #confirmationMenu div {
        width: 250px;
        display: flex;
        flex-direction: column;
        background: var(--nav_bg);
        border: 1px solid var(--video_bd_bot);
        box-shadow: 0 5px 10px -6px rgba(0, 0, 0, .4);
    }

        #confirmationMenu div p {
            color: var(--font_title);
            padding: 20px 0 20px 0;
            text-align: center;
            margin: 0;
        }

        #confirmationMenu div div {
            padding: 0;
            width: 100%;
            display: flex;
            flex-direction: row;
            justify-content: center;
            box-shadow: none;
            border: none;
        }

            #confirmationMenu div div button {
                width: 50%;
                height: 36px;
                margin: 0;
                padding: 0;
                color: var(--font_title);
                background: none;
                box-shadow: none;
            }

                #confirmationMenu div div button:hover {
                    color: var(--secColor);
                    background: var(--mainColor);
                    box-shadow: none;
                }

#ctxMenu {
    position: fixed;
    display: none;
    z-index: 1000;
    width: 165px;
    height: auto;
    background-color: transparent;
    box-shadow: 0 5px 10px -6px rgba(0, 0, 0, .4);
    font-size: 13px;
}

#informationOverlay {
    margin-left: calc(50% - 200px);
    margin-top: 10px;
    position: fixed;
    z-index: 2000;
    width: 500px;
    height: auto;
    background-color: var(--nav_bg);
    border: 1px solid var(--video_bd_bot);
    color: var(--font_title);
    padding-top: 10px;
    padding-top: 10px;
    font-size: 18px;
    box-shadow: 0 5px 10px -6px rgba(0, 0, 0, .4);
}

    #informationOverlay button {
        height: 30px;
        width: 30px;
        padding: 0;
        margin-left: calc(100% - 40px);
    }

        #informationOverlay button:hover {
            background-color: var(--mainColor);
            color: var(--secColor);
        }

#notifications {
    position: fixed;
    z-index: 2000;
    width: 500px;
    right: 15px;
    bottom: 15px;
    height: auto;
    background-color: var(--nav_bg);
    border: 1px solid var(--video_bd_bot);
    color: var(--font_title);
    font-size: 18px;
    box-shadow: 0 5px 10px -6px rgba(0, 0, 0, .4);
}

html {
    height: 100%;
}

body {
    margin: 0;
    font-family: 'Roboto', sans-serif;
    --red: #db4437;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    overflow-x: hidden;
    height: calc(100% - 40px);
}

i {
    margin-right: 2px;
}

nav {
    display: flex;
    align-items: center;
    top: 0;
    left: 0;
    right: 0;
    position: fixed;
    width: 100%;
    background-color: var(--nav_bg);
    height: 40px;
    z-index: 2;
    box-shadow: 0 5px 10px -8px rgba(0, 0, 0, .2);
}

button {
    padding: 5px;
    margin: 5px;
    border: transparent;
    background-color: transparent;
    color: var(--font_title);
    cursor: pointer;
}

    button:focus {
        outline: none;
    }

nav button {
    display: flex !important;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    height: 100%;
    max-width: 40px;
    margin: 0;
    padding: 0 8px 0 8px;
    border-radius: 0px;
    transition: max-width 0.2s ease-in-out;
}

    nav button p {
        font-family: 'Roboto', sans-serif;
        font-size: 14px;
        font-weight: bold;
        color: var(--secColor);
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        margin: 0 5px 0 10px;
    }

nav p {
    margin-left: 10px;
    font-size: 22px;
    color: var(--font_title);
}

nav button:hover {
    color: var(--secColor);
    background-color: var(--mainColor);
}

    nav button:hover p {
        color: var(--secColor);
    }

    input:focus {
        outline: none;
    }

input[type=text] {
    margin-left: 4px;
    border-radius: 0;
    padding: 4px;
    border: solid var(--font_text) 1px;
    width: 250px;
    height: 18px;
    color: var(--font_title);
    background-color: var(--bg);
}

    input[type=text]:focus, input[type=text]:hover {
        border: solid var(--mainColor) 1px;
    }

input[type=number] {
    padding: 2px;
    border: solid var(--font_title) 1px;
    border-radius: 0;
    width: 250px;
    font-weight: bold;
    color: var(--font_title);
    background-color: var(--nav_bg);
    -moz-appearance: textfield;
    -webkit-appearance: textfield;
}

    input[type=number]:hover, input[type=number]:focus {
        border-color: var(--mainColor);
    }

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=text].search {
    position: absolute;
    top: -100px;
    display: flex;
    padding: 4px;
    margin: 0;
    height: 18px;
    width: 300px;
}

tr {
    padding: 0;
}
/* ... */

